# CS120-Tuberculosis-Detection

./: .gitignore  CMakeLists.txt  README  decision_tree.cpp  decision_tree.h  image_processor  image_processor.cpp  image_processor.h  main.cpp  trainer.cpp
